--- a/config/corne.conf
+++ b/config/corne.conf
@@ -1,3 +1,9 @@
 CONFIG_ZMK_SLEEP=y
 CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1800000
+
 CONFIG_ZMK_POINTING=y
+
+CONFIG_ZMK_RGB_UNDERGLOW=n
+CONFIG_WS2812_STRIP=n
+CONFIG_ZMK_BACKLIGHT=n
+CONFIG_ZMK_EXT_POWER=n
